--- a/src/components/NewsList.astro
+++ b/src/components/NewsList.astro
@@ -8,7 +8,7 @@ const { remainingposts } = Astro.props;
       {remainingposts.map((post: any) => (
         <a
           class="block m-1 p-2 border rounded-lg hover:bg-gray-100"
-          href={`/${post.collection}/${post.slug}/`}
+          href={`/${post.data.main_tag}/${post.slug}/`}
         >
           <div class="flex md:flex-wrap items-start space-x-4">
             <img
