--- a/src/pages/kultur/index.astro
+++ b/src/pages/kultur/index.astro
@@ -17,14 +17,14 @@ filteredPosts.sort(
 const [mainNews, ...remainingposts] = filteredPosts;
 ---
 
-<BaseLayout currentTab="Kultur">
+<BaseLayout currentTab="kultur">
   {
     (
       <MainNewsCard
         title={mainNews.data.title}
         description={mainNews.data.description}
         image={mainNews.data.image}
-        url={`/${mainNews.collection}/${mainNews.slug}/`}
+        url={`/${mainNews.data.main_tag}/${mainNews.slug}/`}
       />
     )
   }
