--- a/src/pages/politikk/[...slug].astro
+++ b/src/pages/politikk/[...slug].astro
@@ -3,16 +3,23 @@ import { getCollection } from "astro:content";
 import ArticleLayout from "../../layouts/ArticleLayout.astro";
 
 export async function getStaticPaths() {
-  const politikkposts = await getCollection("Politikk");
+  const artikkelsPosts = await getCollection("artikkels");
 
-  return politikkposts.map((post) => ({
+  const filteredPosts = artikkelsPosts.filter(
+    (post) => post.data.main_tag === "politikk",
+  );
+
+  return filteredPosts.map((post) => ({
     params: { slug: post.slug },
   }));
 }
 
 const { slug } = Astro.params;
-const politikkposts = await getCollection("Politikk");
-const post = politikkposts.find((post) => post.slug === slug);
+const allPosts = await getCollection("artikkels");
+
+const post = allPosts.find(
+  (post) => post.slug === slug && post.data.main_tag === "politikk",
+);
 ---
 
 <ArticleLayout>
