--- a/src/components/MainNewsCard.astro
+++ b/src/components/MainNewsCard.astro
@@ -17,7 +17,7 @@ const { title, description, image, url } = Astro.props;
       <div class="relative overflow-hidden rounded-lg">
         <img
           class="block max-h-[65vh] rounded-lg transform transition-transform duration-300 group-hover:scale-110"
-          src={"../" + image}
+          src={"/" + image}
         />
         <div
           class="absolute bottom-0 bg-black bg-opacity-40 rounded-lg w-full max-h-[30%] text-white text-center px-2 py-4"
