--- a/src/pages/om_oss/index.astro
+++ b/src/pages/om_oss/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout currentTab="Om oss">
+<BaseLayout>
   <div class="col-span-3">
     <div class="my-10 flex flex-col items-center">
       <article
