--- a/src/pages/respons/index.astro
+++ b/src/pages/respons/index.astro
@@ -5,4 +5,4 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 const classePosts = await getCollection("respons");
 ---
 
-<BaseLayout currentTab="Mening"> NOE annerledes </BaseLayout>
+<BaseLayout> NOE annerledes </BaseLayout>
