--- a/src/components/MainNewsCard.astro
+++ b/src/components/MainNewsCard.astro
@@ -1,12 +1,11 @@
 ---
 interface Props {
   title: string;
-  description?: string;
   image?: string;
   url: string;
 }
 
-const { title, description, image, url } = Astro.props;
+const { title, image, url } = Astro.props;
 ---
 
 <div
@@ -18,6 +17,7 @@ const { title, description, image, url } = Astro.props;
         <img
           class="block max-h-[65vh] rounded-lg transform transition-transform duration-300 group-hover:scale-110"
           src={"/" + image}
+          alt={image}
         />
         <div
           class="absolute bottom-0 bg-black bg-opacity-40 rounded-lg w-full max-h-[30%] text-white text-center px-2 py-4"
