--- a/src/components/navigation_ui/Navbar.astro
+++ b/src/components/navigation_ui/Navbar.astro
@@ -1,10 +1,6 @@
 ---
+import Link from "./Link.astro";
 import siteConfig from "../../site-config";
-
-interface Props {
-  currentTab: string;
-}
-
 const navLinks = siteConfig.navLinks || [];
 ---
 
@@ -14,22 +10,21 @@ const navLinks = siteConfig.navLinks || [];
 >
   <nav class="w-full md:w-[50vw]">
     <div
-      class="flex flex-wrap gap-x-4 md:gap-x-6 w-full md:w-[80%] border-b-2 border-gray-200 mb-6 md:mb-10 pt-4 md:pt-8"
+      class="gap-x-4 md:gap-x-6 w-full md:w-full border-b-2 border-gray-200 mb-6 md:mb-10 pt-4 md:pt-8"
     >
-      {
-        navLinks.map((link) => (
-          <a
-            class={`text-lg md:text-xl pb-1 border-b-2 ${
-              link.text === Astro.props.currentTab
-                ? "border-opacity-100 border-black"
-                : "border-opacity-0 border-black hover:border-opacity-100"
-            } transition-colors duration-150 ease-linear`}
-            href={link.href}
-          >
-            {link.text}
-          </a>
-        ))
-      }
+      <ul class="flex flex-wrap">
+        {
+          navLinks.map((item) => (
+            <li>
+              <Link text={item.text} href={item.href} data-navLink />
+            </li>
+          ))
+        }
+      </ul>
     </div>
   </nav>
+
+  <script>
+    import "../../utils/nav.js";
+  </script>
 </header>
