--- a/src/pages/artikkels/index.astro
+++ b/src/pages/artikkels/index.astro
@@ -13,12 +13,11 @@ artikkelsPosts.sort(
 const [mainNews, ...remainingposts] = artikkelsPosts;
 ---
 
-<BaseLayout currentTab="">
+<BaseLayout>
   {
     (
       <MainNewsCard
         title={mainNews.data.title}
-        description={mainNews.data.description}
         image={mainNews.data.image}
         url={`/${mainNews.data.main_tag}/${mainNews.slug}/`}
       />
