--- a/src/pages/utenriks/index.astro
+++ b/src/pages/utenriks/index.astro
@@ -17,12 +17,11 @@ filteredPosts.sort(
 const [mainNews, ...remainingposts] = filteredPosts;
 ---
 
-<BaseLayout currentTab="Utenriks">
+<BaseLayout>
   {
     (
       <MainNewsCard
         title={mainNews.data.title}
-        description={mainNews.data.description}
         image={mainNews.data.image}
         url={`/${mainNews.collection}/${mainNews.slug}/`}
       />
