--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,23 +1,38 @@
 ---
-import ArticleLayout from "../layouts/ArticleLayout.astro";
+import BaseHead from "../components/BaseHead.astro";
+import ArticleUi from "../components/navigation_ui/Article_Ui.astro";
+import ViewTransitions from "astro/components/ViewTransitions.astro";
+import { fade } from "astro:transitions";
 ---
 
-<ArticleLayout title={"Obs..."}>
-  <div class="my-10 flex flex-col items-center">
-    <img
-      src={"/faveicon.webp"}
-      class="max-w-[80vw] max-h-[30vh] h-auto rounded-lg mb-6 object-cover"
-    />
-    <article class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10">
-      <header class="mb-4">
-        <h1 class="text-4xl font-bold text-gray-800">Obs....</h1>
-        <p class="text-sm text-gray-500 mt-2">
-          Ser ut som om det har skjedd en feil
-        </p>
-      </header>
-      <div class="prose prose-lg text-gray-700 leading-relaxed">
-        Om denne feilen vedvarer ta kontakt med Navn og epostadresse
+<!doctype html>
+<html>
+  <head>
+    <BaseHead title={"Obs..."} />
+    <ViewTransitions />
+  </head>
+  <body class="sm:px-96 md:px-14">
+    <ArticleUi />
+    <main transition:animate={fade({ duration: "0.25s" })}>
+      <div class="my-10 flex flex-col items-center">
+        <img
+          src={"/faveicon.webp"}
+          class="max-w-[80vw] max-h-[30vh] h-auto rounded-lg mb-6 object-cover"
+        />
+        <article
+          class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10"
+        >
+          <header class="mb-4">
+            <h1 class="text-4xl font-bold text-gray-800">Obs....</h1>
+            <p class="text-sm text-gray-500 mt-2">
+              Ser ut som om det har skjedd en feil
+            </p>
+          </header>
+          <div class="prose prose-lg text-gray-700 leading-relaxed">
+            Om denne feilen vedvarer ta kontakt med Navn og epostadresse
+          </div>
+        </article>
       </div>
-    </article>
-  </div>
-</ArticleLayout>
+    </main>
+  </body>
+</html>
