--- a/src/components/navigation_ui/Link.astro
+++ b/src/components/navigation_ui/Link.astro
@@ -12,8 +12,8 @@ const { text, href, classes, ...rest } = Astro.props as Props;
   href={href}
   class:list={[
     "link",
-    "text-lg md:text-xl px-2 pb-1  border-b-2 border-opacity-0",
-    "border-black hover:border-opacity-100 transition-colors duration-150 ease-linear",
+    "text-lg md:text-xl px-2 pb-1 border-b-2 border-opacity-0",
+    "border-[#AFAFA1] hover:border-opacity-100 transition-colors duration-150 ease-linear",
     classes,
   ]}
   {...rest}
