--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -34,7 +34,7 @@ const { post } = Astro.props;
                 class="max-w-[80vw] max-h-[30vh] h-auto rounded-lg mb-6 object-cover"
               />
             )}
-            <article class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg mt-10">
+            <article class="max-w-4xl mx-auto border rounded-xl border-gray-300 p-6 bg-white mt-10 shadow-md mt-10">
               <header class="mb-4">
                 <h1 class="text-4xl font-bold text-gray-800">
                   {post.data.title}
