--- a/src/pages/respons/index.astro
+++ b/src/pages/respons/index.astro
@@ -3,4 +3,37 @@ import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout> NOE annerledes </BaseLayout>
+<BaseLayout>
+  <div class="md:col-span-3 md:flex md:items-center md:justify-center">
+    <div
+      class="bg-white p-8 max-w-4xl mx-auto border rounded-xl border-gray-300 shadow-xl"
+    >
+      <h1
+        class="text-6xl font-extrabold text-gray-900 mb-4 border-b-2 border-gray-300 pb-2"
+      >
+        Kommer snart!
+      </h1>
+      <p class="text-lg text-gray-700 mb-6">
+        We're excited to announce that this page is under construction. Please
+        check back soon for updates on our latest news and stories.
+      </p>
+      <p class="text-gray-600 mb-8">
+        In the meantime, feel free to explore our other sections.
+      </p>
+      <div class="flex space-x-4 mt-4 text-black">
+        <a
+          href="/"
+          class="px-6 py-3 bg-[#DEDDD2] rounded-full border border-[#C4C4B8] hover:bg-[#E8E8D6] transition duration-200"
+        >
+          Gå tilbake
+        </a>
+        <a
+          href="/om_oss"
+          class="px-6 py-3 text-black border border-[#C4C4B8] rounded-full hover:bg-[#E8E8D6] transition duration-200"
+        >
+          ta kontakt
+        </a>
+      </div>
+    </div>
+  </div>
+</BaseLayout>
