--- a/src/pages/respons/index.astro
+++ b/src/pages/respons/index.astro
@@ -14,11 +14,12 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
         Kommer snart!
       </h1>
       <p class="text-lg text-gray-700 mb-6">
-        We're excited to announce that this page is under construction. Please
-        check back soon for updates on our latest news and stories.
+        Denne sida er ikke klar for øyeblikket. Vi håper du kommer tilbake for å
+        se hva vi har planlagt å ha her.
       </p>
       <p class="text-gray-600 mb-8">
-        In the meantime, feel free to explore our other sections.
+        I mellomtiden kan du utforske resten av sida og lese artikklene som er
+        ute.
       </p>
       <div class="flex space-x-4 mt-4 text-black">
         <a
