--- a/src/pages/om_oss/index.astro
+++ b/src/pages/om_oss/index.astro
@@ -5,19 +5,33 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 <BaseLayout>
   <div class="col-span-3">
     <div class="my-10 flex flex-col items-center">
-      <article
+      <div
         class="max-w-4xl mx-auto border rounded-xl border-gray-300 shadow-xl p-6 bg-white mt-10"
       >
         <header class="mb-4">
           <h1 class="text-4xl font-extrabold text-gray-800">Om oss</h1>
-          <p class="text-sm text-gray-500 mt-2">
-            Vi er en gjeng studenter som ønsker å dekke nyheter fra et mer
-            historisk perspektiv hvor man får kontekst som man ellers mangler.
-            ta kontakt på eposten vår om du ønsker å skrive for oss. Epost NOE
-            ELLER NOE ANNET
+          <p class="text-gray-500 my-2">
+            Vi er Folkets rop, et gjeng studenter, akademikere og aktivister fra
+            NTNU i Norge. Født ut av en global bevegelse mot krig, okkupasjon og
+            undertrykkelse, samler vi stemmer fra ulike kulturer og identiteter
+            for å utfordre feilaktige narrativer, øke bevisstheten og inspirere
+            til handling. Vårt visjon er forankret i rettferdighet, sannhet og
+            solidaritet med undertrykte folkeslag, spesielt i Palestina, hvor
+            kampen mot imperialisme, kolonialisme og sionisme gir gjenklang over
+            hele verden.
+          </p>
+          <h2 class="text-3xl font-bold text-gray-800">Vår Visjon</h2>
+          <p class="text-gray-500 mt-2">
+            Vi ser for oss en verden der rettferdighet bestemmer, der hver
+            stemme har makt, og der menneskeheten står sammen over landegrenser
+            til forsvar for frihet. Vi tror på styrken i enhet, der
+            enkeltpersoner fra alle bakgrunner går sammen for å stå imot de
+            systemiske kreftene som fører til krig, fordrivelse og utnyttelse.
+            Vår avis søker å være en stemme for de stemmeløse og en alliert for
+            dem som blir nektet rettferdighet.
           </p>
         </header>
-      </article>
+      </div>
     </div>
   </div>
 </BaseLayout>
