fiksen navbar to be fixed

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -21,7 +21,7 @@ const { post } = Astro.props;
     />
     <ViewTransitions />
   </head>
-  <body class="sm:px-96 md:px-14">
+  <body class="sm:px-96 md:px-5 md:mx-2">
     <ArticleUi />
     <main transition:animate={fade({ duration: "0.25s" })}>
       {
