removed kultur page, added arabic categories

--- a/src/components/navigation_ui/Navbar.astro
+++ b/src/components/navigation_ui/Navbar.astro
@@ -16,15 +16,11 @@ const navLinks = siteConfig.navLinks || [];
         {
           navLinks.map((item) => (
             <li>
-              <Link text={item.text} href={item.href} data-navLink />
+              <Link text={item.text_arb} href={item.href} data-navLink />
             </li>
           ))
         }
       </ul>
     </div>
   </nav>
-
-  <script>
-    import "../../utils/nav.js";
-  </script>
 </header>
