testing out new font

--- a/src/components/navigation_ui/Navbar.astro
+++ b/src/components/navigation_ui/Navbar.astro
@@ -16,7 +16,7 @@ const navLinks = siteConfig.navLinks || [];
         {
           navLinks.map((item) => (
             <li>
-              <Link text={item.text_arb} href={item.href} data-navLink />
+              <Link text={item.text} href={item.href} data-navLink />
             </li>
           ))
         }
