--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -2,7 +2,7 @@
 import { fade } from "astro:transitions";
 import { ViewTransitions } from "astro:transitions";
 import BaseHead from "../components/BaseHead.astro";
-import ArticleUi from "../components/navigation_ui/ArticleUi.astro";
+import Ui from "../components/navigation_ui/Ui.astro";
 
 interface Props {
   post?: any;
@@ -22,7 +22,9 @@ const { post } = Astro.props;
     <ViewTransitions />
   </head>
   <body class="sm:px-96 md:px-5 md:mx-2">
-    <ArticleUi />
+    <div class="flex mt-5">
+      <Ui />
+    </div>
     <main transition:animate={fade({ duration: "0.25s" })}>
       {
         post ? (
