--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,10 @@ const { head } = Astro.props;
 ---
 
 <!doctype html>
-<html class="bg-white text-gray-900 dark:bg-black dark:text-gray-100" lang="No">
+<html
+  class="bg-white text-gray-900 dark:bg-black dark:text-gray-100 font-sans-"
+  lang="No"
+>
   <head>
     <BaseHead {...head} />
     {/*<CheckTheme />*/}
