--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ const { head } = Astro.props;
 
 <!doctype html>
 <html
-  class="bg-white text-gray-900 dark:bg-black dark:text-gray-100 font-sans-"
+  class="bg-white text-gray-900 dark:bg-black dark:text-gray-100 font-sans"
   lang="No"
 >
   <head>
