--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -21,7 +21,7 @@ const { post } = Astro.props;
     />
     <ViewTransitions />
   </head>
-  <body class="sm:px-96 md:px-5 md:mx-2">
+  <body class="md:w-4/5 md:mx-auto">
     <div class="flex mt-5">
       <Ui />
     </div>
