--- a/src/pages/om_oss/index.astro
+++ b/src/pages/om_oss/index.astro
@@ -4,7 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 <BaseLayout>
   <div class="col-span-3">
-    <div class="my-10 flex flex-col items-center">
+    <div class="my-10 mx-4 flex flex-col items-center">
       <div
         class="max-w-4xl mx-auto border rounded-xl border-gray-300 shadow-xl p-6 bg-white mt-10"
       >
