--- a/src/components/navigation_ui/Navbar.astro
+++ b/src/components/navigation_ui/Navbar.astro
@@ -1,9 +1,16 @@
 ---
 import Link from "./Link.astro";
+
 import siteConfig from "../../site-config";
 const navLinks = siteConfig.navLinks || [];
 ---
 
+<div class="flex mt-5">
+  <a href="/" class="inline-flex items-center">
+    <img src="/faveicon.webp" alt="logo" class="mr-2 w-20 rounded-full" />
+    <h1 class="font-bold text-4xl">Folkets rop</h1>
+  </a>
+</div>
 <header
   id="header"
   class="flex flex-col md:flex-row items-start md:items-center"
