--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,25 +3,17 @@ import { fade } from "astro:transitions";
 import { ViewTransitions } from "astro:transitions";
 import BaseHead from "../components/BaseHead.astro";
 import Navbar from "../components/navigation_ui/Navbar.astro";
-import Ui from "../components/navigation_ui/Ui.astro";
 
 const { head } = Astro.props;
 ---
 
 <!doctype html>
-<html
-  class="bg-white text-gray-900 dark:bg-black dark:text-gray-100 font-sans"
-  lang="No"
->
+<html class="text-gray-900" lang="No">
   <head>
     <BaseHead {...head} />
-    {/*<CheckTheme />*/}
     <ViewTransitions />
   </head>
   <body class="md:w-4/5 md:mx-auto">
-    <div class="flex mt-5 items-center">
-      <Ui />
-    </div>
     <Navbar />
     <main transition:animate={fade({ duration: "0.25s" })}>
       <div
