--- a/src/components/NewsList.astro
+++ b/src/components/NewsList.astro
@@ -4,26 +4,26 @@ const { remainingposts } = Astro.props;
 
 {
   remainingposts.length > 0 && (
-    <div class="md:col-span-1 md:overflow-x-hidden md:mt-[11vh] md:max-h-[60vh] overflow-y-visible ">
+    <div class="md:col-span-1 md:overflow-x-hidden md:mt-[11vh] md:max-h-[60vh] pb-10 mb-10">
       {remainingposts.map((post: any) => (
         <a
-          class="block m-1 p-2 border rounded-lg hover:bg-gray-100"
+          class="block mx-4 p-2 border rounded-lg hover:bg-gray-100"
           href={`/${post.data.main_tag}/${post.slug}/`}
         >
           <div class="flex md:flex-wrap items-start space-x-4">
             <img
-              class="w-[100px] h-[100px]  md:w-[220px] md:h-[220px]  md:mx-auto object-cover rounded-lg"
+              class="w-[100px] h-[100px] md:w-[220px] md:h-[220px] md:mx-auto object-cover rounded-lg"
               src={"/" + post.data.image}
               alt={post.data.title}
             />
             <div class="w-80 max-h-[6rem] overflow-hidden">
-              <h2 class="text-xl md:text-lg font-semibold overflow-hidden text-ellipsis">
+              <h2 class="text-xl md:text-lg font-semibold overflow-hidden text-ellipsis whitespace-nowrap">
                 {post.data.title}
               </h2>
-              <p class="text-gray-600  text-ellipsis">
+              <p class="text-gray-600 max-h-16 overflow-hidden text-ellipsis line-clamp-2">
                 {post.data.description}
               </p>
-              <p class="text-gray-600  text-ellipsis">{post.data.date}</p>
+              <p class="text-gray-600 text-sm">{post.data.date}</p>
             </div>
           </div>
         </a>
